--- a/.prow.yaml
+++ b/.prow.yaml
@@ -216,6 +216,7 @@ presubmits:
               cpu: 500m
 
   - name: pull-machine-controller-e2e-azure
+    always_run: true
     decorate: true
     error_on_eviction: true
     clone_uri: "ssh://git@github.com/kubermatic/machine-controller.git"
