Regenetare pkg/userdata/*/testdata
Signed-off-by: Artiom Diomin <kron82@gmail.com>

--- a/pkg/userdata/sles/testdata/dist-upgrade-on-boot.yaml
+++ b/pkg/userdata/sles/testdata/dist-upgrade-on-boot.yaml
@@ -56,8 +56,8 @@ write_files:
     mv /etc/fstab.noswap /etc/fstab
     swapoff -a
 
-    zypper --non-interactive --quiet --color install ebtables \
-      ceph-common \
+    zypper --non-interactive --quiet --color install \
+      ebtables \
       e2fsprogs \
       jq \
       socat \
